--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -37,6 +37,38 @@ $light_blue: #EEFCFE
     margin: 10px
   .list
     +span-columns(7,7)
+
+    .info
+
+      color: $viola
+      border: 3px solid $viola
+      text-decoration: none
+      position: absolute
+      bottom: 5%
+      margin-left: -25%
+      left: 50%
+      padding: 5px 15px
+      z-index: 2
+      text-align: center
+      p
+        margin: 0
+        padding: 0
+        position: relative
+        z-index: 2
+        font-size: px-to-em(12px,16px)
+        line-height: px-to-em(18px,16px)
+      .bkgr
+        background-color: white
+        +stretch(0,0,0,0)
+        +opacity(0.7)
+        margin: 0
+
+  .overlay
+    display: none
+    +stretch(0,0,0,0)
+    +opacity(0.2)
+    background-color: $viola
+    margin: 0
   h2.title
     z-index: 10
     position: relative
