--- a/source/shop/list.html.haml
+++ b/source/shop/list.html.haml
@@ -14,39 +14,77 @@
       .list
         %div
           %a{:href => "/shop/stripesmania/minidress-stripes-red.html"}
+            .info
+              %p
+                Minidress <br />
+                340€
+              .bkgr
+            .overlay
             = image_tag "shop/list/small_lowfi/small_dress_righe_rosso_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_dress_righe_rosso.jpg"
 
         %div
           %a{:href => "/shop/stripesmania/skirt-dress-stripes-orange.html"}
+            .info
+              %p
+                Minidress <br />
+                340€
+              .bkgr
+            .overlay
             = image_tag "shop/list/small_lowfi/small_gonna_righe_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_righe_arancio.jpg"
 
         %div
           %a{:href => "/shop/stripesmania/skirt-dress-stripes-green.html"}
+            .info
+              %p
+                Minidress <br />
+                340€
+              .bkgr
+            .overlay
             = image_tag "shop/list/small_lowfi/small_gonna_verde_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_verde.jpg"
         %div
           %a{:href => "/shop/stripesmania/three-piece-skirt-orange.html"}
+            .info
+              %p
+                Minidress <br />
+                340€
+              .bkgr
+            .overlay
             = image_tag "shop/list/small_lowfi/small_gonnalunga_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonnalunga_arancio.jpg"
         %div
           %a{:href => "/shop/stripesmania/skirt-dress-orange-stripes.html"}
+            .info
+              %p
+                Minidress <br />
+                340€
+              .bkgr
+            .overlay
             = image_tag "shop/list/small_lowfi/small_gonnamini_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonnamini_arancio.jpg"
-
-
         %div
           %a{:href => "/shop/stripesmania/mini-skirt-stripes-green.html"}
+            .info
+              %p
+                Minidress <br />
+                340€
+              .bkgr
+            .overlay
             = image_tag "shop/list/small_lowfi/small_mini_righe_verdi_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_mini_righe_verdi.jpg"
         %div
           %a{:href => "/shop/stripesmania/two-piece-short-orange-dress.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_minidress_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_minidress_arancio.jpg"
 
         %div
           %a{:href => "/shop/stripesmania/overalls-stripe-orange.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_salopette_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_salopette_arancio.jpg"
         %div
           %a{:href => "/shop/stripesmania/overalls-stripes-red.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_salopette_rossa_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_salopette_rossa.jpg"
 
         %div
           %a{:href => "/shop/stripesmania/top-stripes-orange.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_top_righe_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_top_righe_arancio.jpg"
 
 
@@ -58,47 +96,59 @@
       .list
         %div
           %a{:href => "/shop/summeressentials/overalls-black.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_tuta_nera_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_tuta_nera.jpg"
         %div
           %a{:href => "/shop/summeressentials/vichy-dress-babyblue.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_dress_vichy_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_dress_vichy.jpg"
         %div
           %a{:href => "/shop/summeressentials/top-blue.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_top_blu_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_top_blu.jpg"
         %div
           %a{:href => "/shop/summeressentials/top-black.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_top_nero_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_top_nero.jpg"
         %div
           %a{:href => "/shop/summeressentials/3-white-dress.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_milla_bianco_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_bianco.jpg"
         %div
           %a{:href => "/shop/summeressentials/3-dress-polkadot.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_milla_dot_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_dot.jpg"
         %div
           %a{:href =>"/shop/summeressentials/3-dress-rose.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_milla_fucsia_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_fucsia.jpg"
-
         %div
           %a{:href => "/shop/summeressentials/3-dress-denim.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_milla_jeans_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_jeans.jpg"
         %div
           %a{:href => "/shop/summeressentials/3-dress-popeline.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_milla_popeline_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_popeline.jpg"
         %div
           %a{:href => "/shop/summeressentials/3-dress-vichy.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_milla_vichy_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_vichy.jpg"
         %div
           %a{:href => "/shop/summeressentials/mini-white.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_mini_bianca_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_mini_bianca.jpg"
         %div
           %a{:href => "/shop/summeressentials/skirt-white.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_gonna_bianca_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_bianca.jpg"
-
         %div
           %a{:href => "/shop/summeressentials/skirt-blue.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_gonna_blu_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_blu.jpg"
         %div
           %a{:href => "/shop/summeressentials/skirt-black.html"}
+            .overlay
             = image_tag "shop/list/small_lowfi/small_gonna_nera_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_nera.jpg"
 
   = partial "partials/footer"
