positions and link in top list

--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -45,7 +45,7 @@ $light_blue: #EEFCFE
       text-decoration: none
       position: absolute
       bottom: 5%
-      margin-left: -25%
+      margin-left: -20%
       left: 50%
       padding: 5px 15px
       z-index: 2
@@ -75,6 +75,7 @@ $light_blue: #EEFCFE
     a
       font-weight: normal
       color: $viola
+      cursor: default
       text-decoration: none
       position: relative
       border: 3px solid $viola
@@ -84,10 +85,7 @@ $light_blue: #EEFCFE
       height: 96px
       margin-bottom: 10px
       +span-columns(5,7)
-      &:hover
-        background-color: $viola
-        span
-          color: white
+
       span
         color: $viola
         display: block
