--- a/source/shop/stripesmania/mini-skirt-stripes-green.html.haml
+++ b/source/shop/stripesmania/mini-skirt-stripes-green.html.haml
@@ -8,6 +8,8 @@
       %h1.title
         %span
           Two-piece spring green&white mini skirt
+      %h2.price
+        345€
       %h2.description
         Description
       %p
