single item price + line height fix

--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -45,7 +45,7 @@ $light_blue: #EEFCFE
       text-decoration: none
       position: absolute
       bottom: 5%
-      margin-left: -20%
+      margin-left: -25% + 20px
       left: 50%
       padding: 5px 15px
       z-index: 2
