fix margin problem in body of list + fix center problem with single item in list

--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -29,12 +29,15 @@ $light_blue: #EEFCFE
   #stripesmania-list
     +span-columns(7,7)
     background-color: $giallo
+    margin-left: 0
   #summeressentials-list
     margin-top: 60px
+    margin-left: 0
     +span-columns(7,7)
     background-color: $giallo
   div
     margin: 10px
+
   .list
     +span-columns(7,7)
 
@@ -45,12 +48,13 @@ $light_blue: #EEFCFE
       text-decoration: none
       position: absolute
       bottom: 5%
-      margin-left: -25% + 20px
+      margin-left: -26%
       left: 50%
       padding: 5px 15px
       z-index: 2
       text-align: center
       p
+        width: 80px
         margin: 0
         padding: 0
         position: relative
