prezzi singolo capo

--- a/source/shop/stripesmania/minidress-stripes-red.html.haml
+++ b/source/shop/stripesmania/minidress-stripes-red.html.haml
@@ -8,6 +8,8 @@
       %h1.title
         %span
           Carmine red&white striped dress/top
+      %h2.price
+        275€
       %h2.description
         Description
       %p
