--- a/source/shop/stripesmania/overalls-stripes-red.html.haml
+++ b/source/shop/stripesmania/overalls-stripes-red.html.haml
@@ -8,6 +8,8 @@
       %h1.title
         %span
           Two-piece carmine red & white striped overalls
+      %h2.price
+        357€
       %h2.description
         Description
       %p
