--- a/source/shop/stripesmania/skirt-dress-stripes-green.html.haml
+++ b/source/shop/stripesmania/skirt-dress-stripes-green.html.haml
@@ -8,6 +8,8 @@
       %h1.title
         %span
           Spring green&white skirt/dress
+      %h2.price
+        192€
       %h2.description
         Description
       %p
