--- a/source/shop/stripesmania/three-piece-skirt-orange.html.haml
+++ b/source/shop/stripesmania/three-piece-skirt-orange.html.haml
@@ -8,6 +8,8 @@
       %h1.title
         %span
           Three-piece skirt
+      %h2.price
+        288€
       %h2.description
         Description
       %p
