--- a/source/shop/stripesmania/two-piece-short-orange-dress.html.haml
+++ b/source/shop/stripesmania/two-piece-short-orange-dress.html.haml
@@ -8,6 +8,8 @@
       %h1.title
         %span
           Two-piece short dress
+      %h2.price
+        316€
       %h2.description
         Description
       %p
