--- a/source/shop/summeressentials/3-dress-polkadot.html.haml
+++ b/source/shop/summeressentials/3-dress-polkadot.html.haml
@@ -9,6 +9,8 @@
       %h1.title
         %span
           3-lengths black&orange polka dot dress
+      %h2.price
+        247€
       %h2.description
         Description
       %p
