--- a/source/shop/summeressentials/overalls-black.html.haml
+++ b/source/shop/summeressentials/overalls-black.html.haml
@@ -8,6 +8,8 @@
       %h1.title
         %span
           Black trousers/overalls
+      %h2.price
+        261€
       %h2.description
         Description
       %p
