--- a/source/shop/summeressentials/top-black.html.haml
+++ b/source/shop/summeressentials/top-black.html.haml
@@ -8,6 +8,8 @@
       %h1.title
         %span
           Black top
+      %h2.price
+        192€
       %h2.description
         Description
       %p
