--- a/source/shop/summeressentials/vichy-dress-babyblue.html.haml
+++ b/source/shop/summeressentials/vichy-dress-babyblue.html.haml
@@ -9,6 +9,8 @@
       %h1.title
         %span
           Baby blue&white Vichy dress/top
+      %h2.price
+        316€
       %h2.description
         Description
       %p
