--- a/source/shop/stripesmania/skirt-dress-stripes-orange.html.haml
+++ b/source/shop/stripesmania/skirt-dress-stripes-orange.html.haml
@@ -8,6 +8,8 @@
       %h1.title
         %span
           Orange&white striped skirt
+      %h2.price
+        192€
       %h2.description
         Description
       %p
