--- a/source/shop/stripesmania/top-stripes-orange.html.haml
+++ b/source/shop/stripesmania/top-stripes-orange.html.haml
@@ -8,6 +8,8 @@
       %h1.title
         %span
           Two-piece orange&white striped top
+      %h2.price
+        192€
       %h2.description
         Description
       %p
