--- a/source/shop/summeressentials/3-dress-popeline.html.haml
+++ b/source/shop/summeressentials/3-dress-popeline.html.haml
@@ -8,6 +8,8 @@
       %h1.title
         %span
           3-lengths baby blue popeline dress
+      %h2.price
+        247€
       %h2.description
         Description
       %p
