--- a/source/shop/summeressentials/mini-white.html.haml
+++ b/source/shop/summeressentials/mini-white.html.haml
@@ -9,6 +9,8 @@
       %h1.title
         %span
           Two-piece white mini skirt
+      %h2.price
+        247€
       %h2.description
         Description
       %p
