--- a/source/shop/summeressentials/skirt-black.html.haml
+++ b/source/shop/summeressentials/skirt-black.html.haml
@@ -8,6 +8,8 @@
       %h1.title
         %span
           Black skirt/dress
+      %h2.price
+        192€
       %h2.description
         Description
       %p
