prezzi singolo capo

--- a/source/shop/list.html.haml
+++ b/source/shop/list.html.haml
@@ -42,14 +42,14 @@
             .overlay
             = image_tag "shop/list/small_lowfi/small_gonna_verde_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_verde.jpg"
         %div
-          %a{:href => "/shop/stripesmania/three-piece-skirt-orange.html"}
-            .info
-              %p
-                3 piece skirt <br />
-                288€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/small_lowfi/small_gonnalunga_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonnalunga_arancio.jpg"
+          .info
+            %p
+              3 piece skirt <br />
+              288€ <br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/small_lowfi/small_gonnalunga_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonnalunga_arancio.jpg"
         %div
           %a{:href => "/shop/stripesmania/skirt-dress-orange-stripes.html"}
             .info
@@ -98,14 +98,14 @@
             = image_tag "shop/list/small_lowfi/small_salopette_rossa_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_salopette_rossa.jpg"
 
         %div
-          %a{:href => "/shop/stripesmania/top-stripes-orange.html"}
-            .info
-              %p
-                top <br />
-                192€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/small_lowfi/small_top_righe_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_top_righe_arancio.jpg"
+          .info
+            %p
+              top <br />
+              192€  <br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/small_lowfi/small_top_righe_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_top_righe_arancio.jpg"
 
 
     #summeressentials-list
