--- a/source/stores.html.haml
+++ b/source/stores.html.haml
@@ -54,6 +54,20 @@
           40gradi@alice.it<br />
       %li
         .color-box
+          = image_tag "stores/store4.png"
+        %h2
+          RUSSELL STREET
+        %p
+          %a{href:"http://www.russell-street.com/"}
+            www.russell-street.com/
+        %p
+          No. 6 Saint Francis Yard <br />
+          Wan Chai <br />
+          Hong Kong <br />
+          +852 2866 0800  <br />
+          info@russell-street.com <br />
+      %li
+        .color-box
           .color-border
             %h2
               ONLINE STORES
