fix margin problem in body of list + fix center problem with single item in list

--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -35,12 +35,13 @@ $light_blue: #EEFCFE
     margin-left: 0
     +span-columns(7,7)
     background-color: $giallo
-  div
-    margin: 5px
+
+
 
   .list
     +span-columns(7,7)
-
+    & > div
+      margin: 10px
     .info
 
       color: $viola
