prezzi singolo capo

--- a/source/shop/list.html.haml
+++ b/source/shop/list.html.haml
@@ -17,7 +17,8 @@
             .info
               %p
                 mini dress/top <br />
-                275€
+                <span style= "text-decoration: line-through; font-size: 12px">275€</span><br />
+                55€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_dress_righe_rosso_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_dress_righe_rosso.jpg"
@@ -27,7 +28,8 @@
             .info
               %p
                 skirt/dress <br />
-                192€
+                <span style= "text-decoration: line-through; font-size: 12px">192€</span><br />
+                38€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_gonna_righe_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_righe_arancio.jpg"
@@ -37,7 +39,8 @@
             .info
               %p
                 skirt/dress  <br />
-                192€
+                <span style= "text-decoration: line-through; font-size: 12px">192€</span><br />
+                38€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_gonna_verde_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_verde.jpg"
@@ -45,7 +48,8 @@
           .info
             %p
               3 piece skirt <br />
-              288€ <br />
+              <span style= "text-decoration: line-through; font-size: 12px">288€</span><br />
+              58€ <br />
               SOLD OUT
             .bkgr
           .overlay
@@ -55,7 +59,8 @@
             .info
               %p
                 miniskirt/dress <br />
-                206€
+                <span style= "text-decoration: line-through; font-size: 12px">206€</span><br />
+                41€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_gonnamini_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonnamini_arancio.jpg"
@@ -64,7 +69,8 @@
             .info
               %p
                 miniskirt <br />
-                247€
+                <span style= "text-decoration: line-through; font-size: 12px">247€</span><br />
+                49€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_mini_righe_verdi_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_mini_righe_verdi.jpg"
@@ -73,7 +79,8 @@
             .info
               %p
                 mini dress <br />
-                316€
+                <span style= "text-decoration: line-through; font-size: 12px">316€</span><br />
+                63€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_minidress_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_minidress_arancio.jpg"
@@ -83,7 +90,8 @@
             .info
               %p
                 overalls <br />
-                357€
+                <span style= "text-decoration: line-through; font-size: 12px">357€</span><br />
+                71€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_salopette_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_salopette_arancio.jpg"
@@ -92,7 +100,8 @@
             .info
               %p
                 overalls <br />
-                357€
+                <span style= "text-decoration: line-through; font-size: 12px">357€</span><br />
+                71€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_salopette_rossa_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_salopette_rossa.jpg"
@@ -119,7 +128,8 @@
             .info
               %p
                 overalls <br />
-                261€
+                <span style= "text-decoration: line-through; font-size: 12px">261€</span><br />
+                52€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_tuta_nera_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_tuta_nera.jpg"
@@ -128,7 +138,8 @@
             .info
               %p
                 mini dress/top <br />
-                316€
+                <span style= "text-decoration: line-through; font-size: 12px">316€</span><br />
+                63€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_dress_vichy_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_dress_vichy.jpg"
@@ -137,7 +148,8 @@
             .info
               %p
                 top <br />
-                192€
+                <span style= "text-decoration: line-through; font-size: 12px">192</span><br />
+                38€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_top_blu_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_top_blu.jpg"
@@ -146,7 +158,8 @@
             .info
               %p
                 top <br />
-                192€
+                <span style= "text-decoration: line-through; font-size: 12px">192</span><br />
+                38€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_top_nero_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_top_nero.jpg"
@@ -155,7 +168,8 @@
             .info
               %p
                 3-lenghts dress <br />
-                247€
+                <span style= "text-decoration: line-through; font-size: 12px">247</span><br />
+                49€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_milla_bianco_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_bianco.jpg"
@@ -164,7 +178,8 @@
             .info
               %p
                 3-lenghts dress <br />
-                247€
+                <span style= "text-decoration: line-through; font-size: 12px">247</span><br />
+                49€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_milla_dot_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_dot.jpg"
@@ -173,7 +188,8 @@
             .info
               %p
                 3-lenghts dress <br />
-                247€
+                <span style= "text-decoration: line-through; font-size: 12px">247</span><br />
+                49€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_milla_fucsia_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_fucsia.jpg"
@@ -182,7 +198,8 @@
             .info
               %p
                 3-lenghts dress <br />
-                247€
+                <span style= "text-decoration: line-through; font-size: 12px">247</span><br />
+                49€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_milla_jeans_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_jeans.jpg"
@@ -191,7 +208,8 @@
             .info
               %p
                 3-lenghts dress <br />
-                247€
+                <span style= "text-decoration: line-through; font-size: 12px">247</span><br />
+                49€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_milla_popeline_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_popeline.jpg"
@@ -200,7 +218,8 @@
             .info
               %p
                 3-lenghts dress <br />
-                247€
+                <span style= "text-decoration: line-through; font-size: 12px">247</span><br />
+                49€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_milla_vichy_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_milla_vichy.jpg"
@@ -209,7 +228,8 @@
             .info
               %p
                 miniskirt <br />
-                247€
+                <span style= "text-decoration: line-through; font-size: 12px">247</span><br />
+                49€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_mini_bianca_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_mini_bianca.jpg"
@@ -218,7 +238,8 @@
             .info
               %p
                 skirt/dress <br />
-                192€
+                <span style= "text-decoration: line-through; font-size: 12px">192</span><br />
+                38€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_gonna_bianca_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_bianca.jpg"
@@ -227,7 +248,8 @@
             .info
               %p
                 skirt/dress <br />
-                192€
+                <span style= "text-decoration: line-through; font-size: 12px">192</span><br />
+                38€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_gonna_blu_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_blu.jpg"
@@ -236,7 +258,8 @@
             .info
               %p
                 skirt/dress <br />
-                192€
+                <span style= "text-decoration: line-through; font-size: 12px">192</span><br />
+                38€
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_gonna_nera_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_nera.jpg"
