--- a/source/shop/stripesmania/minidress-stripes-red.html.haml
+++ b/source/shop/stripesmania/minidress-stripes-red.html.haml
@@ -9,7 +9,10 @@
         %span
           Carmine red&white striped dress/top
       %h2.price
-        275€
+        %span{:style=>"text-decoration: line-through; font-size: 24px"}
+          275€
+        %span
+          55€
       %h2.description
         Description
       %p
