--- a/source/shop/stripesmania/overalls-stripe-orange.html.haml
+++ b/source/shop/stripesmania/overalls-stripe-orange.html.haml
@@ -9,7 +9,11 @@
         %span
           Two-piece orange&white striped overalls
       %h2.price
-        357€
+        %span{:style=>"text-decoration: line-through; font-size: 24px"}
+          357€
+        %span
+          71€
+
       %h2.description
         Description
       %p
