--- a/source/shop/stripesmania/two-piece-short-orange-dress.html.haml
+++ b/source/shop/stripesmania/two-piece-short-orange-dress.html.haml
@@ -9,7 +9,10 @@
         %span
           Two-piece short dress
       %h2.price
-        316€
+        %span{:style=>"text-decoration: line-through; font-size: 24px"}
+          316€
+        %span
+          63€
       %h2.description
         Description
       %p
