--- a/source/shop/summeressentials/3-dress-rose.html.haml
+++ b/source/shop/summeressentials/3-dress-rose.html.haml
@@ -9,7 +9,10 @@
         %span
           3-lengths rose dress
       %h2.price
-        247€
+        %span{:style=>"text-decoration: line-through; font-size: 24px"}
+          247€
+        %span
+          49€
       %h2.description
         Description
       %p
