--- a/source/shop/summeressentials/3-dress-vichy.html.haml
+++ b/source/shop/summeressentials/3-dress-vichy.html.haml
@@ -10,7 +10,10 @@
         %span
           3-lengths blue&white Vichy dress
       %h2.price
-        247€
+        %span{:style=>"text-decoration: line-through; font-size: 24px"}
+          247€
+        %span
+          49€
       %h2.description
         Description
       %p
