--- a/source/shop/summeressentials/overalls-black.html.haml
+++ b/source/shop/summeressentials/overalls-black.html.haml
@@ -9,7 +9,10 @@
         %span
           Black trousers/overalls
       %h2.price
-        261€
+        %span{:style=>"text-decoration: line-through; font-size: 24px"}
+          261€
+        %span
+          52
       %h2.description
         Description
       %p
