--- a/source/shop/summeressentials/skirt-black.html.haml
+++ b/source/shop/summeressentials/skirt-black.html.haml
@@ -9,7 +9,10 @@
         %span
           Black skirt/dress
       %h2.price
-        192€
+        %span{:style=>"text-decoration: line-through; font-size: 24px"}
+          192€
+        %span
+          38€
       %h2.description
         Description
       %p
