--- a/source/shop/summeressentials/vichy-dress-babyblue.html.haml
+++ b/source/shop/summeressentials/vichy-dress-babyblue.html.haml
@@ -10,7 +10,10 @@
         %span
           Baby blue&white Vichy dress/top
       %h2.price
-        316€
+        %span{:style=>"text-decoration: line-through; font-size: 24px"}
+          316€
+        %span
+          63€
       %h2.description
         Description
       %p
