--- a/source/shop/stripesmania/mini-skirt-stripes-green.html.haml
+++ b/source/shop/stripesmania/mini-skirt-stripes-green.html.haml
@@ -9,7 +9,10 @@
         %span
           Two-piece spring green&white mini skirt
       %h2.price
-        247€
+        %span{:style=>"text-decoration: line-through; font-size: 24px"}
+          247€
+        %span 49€
+
       %h2.description
         Description
       %p
