--- a/source/shop/stripesmania/skirt-dress-orange-stripes.html.haml
+++ b/source/shop/stripesmania/skirt-dress-orange-stripes.html.haml
@@ -9,7 +9,10 @@
         %span
           Orange&white striped skirt
       %h2.price
-        206€
+        %span{:style=>"text-decoration: line-through; font-size: 24px"}
+          206€
+        %span
+          41€
       %h2.description
         Description
       %p
