--- a/source/shop/stripesmania/three-piece-skirt-orange.html.haml
+++ b/source/shop/stripesmania/three-piece-skirt-orange.html.haml
@@ -9,7 +9,10 @@
         %span
           Three-piece skirt
       %h2.price
-        288€
+        %span{:style=>"text-decoration: line-through; font-size: 24px"}
+          288€
+        %span
+          58€
       %h2.description
         Description
       %p
