--- a/source/shop/summeressentials/mini-white.html.haml
+++ b/source/shop/summeressentials/mini-white.html.haml
@@ -10,7 +10,10 @@
         %span
           Two-piece white mini skirt
       %h2.price
-        247€
+        %span{:style=>"text-decoration: line-through; font-size: 24px"}
+          247€
+        %span
+          49€
       %h2.description
         Description
       %p
