fix margin problem in body of list + fix center problem with single item in list

--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -7,7 +7,7 @@ $viola: #9E1E62
 $grigio: #D3D6DD
 $dark-grey: #9b9595
 $giallo: #FDFAE6
-$light_blue: #EEFCFE
+$light_blue: #CCF1F2
 .page
   +clearfix
   +container($total-columns, $break-1, $break-2,$break-3)
