fix margin problem in body of list + fix center problem with single item in list

--- a/source/shop/list.html.haml
+++ b/source/shop/list.html.haml
@@ -130,6 +130,7 @@
                 overalls <br />
                 <span style= "text-decoration: line-through; font-size: 12px">261€</span><br />
                 52€
+                SOLD OUT
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_tuta_nera_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_tuta_nera.jpg"
