prezzi singolo capo

--- a/source/shop/list.html.haml
+++ b/source/shop/list.html.haml
@@ -48,8 +48,6 @@
           .info
             %p
               3 piece skirt <br />
-              <span style= "text-decoration: line-through; font-size: 12px">288€</span><br />
-              58€ <br />
               SOLD OUT
             .bkgr
           .overlay
@@ -110,7 +108,6 @@
           .info
             %p
               top <br />
-              192€  <br />
               SOLD OUT
             .bkgr
           .overlay
@@ -128,8 +125,7 @@
             .info
               %p
                 overalls <br />
-                <span style= "text-decoration: line-through; font-size: 12px">261€</span><br />
-                52€
+                SOLD OUT
               .bkgr
             .overlay
             = image_tag "shop/list/small_lowfi/small_tuta_nera_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_tuta_nera.jpg"
