prezzi singolo capo

--- a/source/stores.html.haml
+++ b/source/stores.html.haml
@@ -74,8 +74,8 @@
         %h2
           BOUTIQUE ON CLICK
         %p
-          %a{href:"http://www.boutuqueonclick.com"}
-            www.boutuqueonclick.com
+          %a{href:"http://www.boutiqueonclick.com"}
+            www.boutiqueonclick.com
         %h2
           ATELIER AANGENAAM
         %p
