--- a/source/newsletters/pressday2013_1.html.haml
+++ b/source/newsletters/pressday2013_1.html.haml
@@ -45,13 +45,8 @@
               %td.story
                 = image_tag "newsletter_flr-07.png"
                 %p.description
-                  <strong>flavialarocca</strong> is a fashion brand for a contemporary conscious woman who loves a minimalist and feminine lines.<br />
-                  The collection in based on versatile modules entirely manufactured in Italy with recycled textiles
-                  that try to reduce the impact on the environment, save energy and take care of the health of the customers.
-                %p.description
-                  <strong>flavialarocca</strong> is a fashion brand for a contemporary conscious woman who loves a minimalist and feminine lines.<br />
-                  The collection in based on versatile modules entirely manufactured in Italy with recycled textiles
-                  that try to reduce the impact on the environment, save energy and take care of the health of the customers.
+                  Colgo l'occasione per comunicare che, da questa stagione, l'ufficio stampa <strong>flavialarocca</strong> tornerà ad essere interno.<br />
+                  Per qualsiasi richiesta si prega di contattare  press@flavialarocca.com.
 
 
 
