prezzi singolo capo

--- a/source/newsletters/pressday2013_1.html.haml
+++ b/source/newsletters/pressday2013_1.html.haml
@@ -46,7 +46,7 @@
                 = image_tag "newsletter_flr-07.png"
                 %p.description
                   Colgo l'occasione per comunicare che, da questa stagione, l'ufficio stampa <strong>flavialarocca</strong> tornerà ad essere interno.<br />
-                  Per qualsiasi richiesta si prega di contattare  press@flavialarocca.com.
+                  Per qualsiasi richiesta si prega di contattare  <a href="mailto:press@flavialarocca.com">press@flavialarocca.com</a>
 
 
 
