prezzi singolo capo

--- a/source/newsletters/pressday2013_1.html.haml
+++ b/source/newsletters/pressday2013_1.html.haml
@@ -45,6 +45,15 @@
               %td.story
                 = image_tag "newsletter_flr-07.png"
                 %p.description
+                  PRESSDAY FLAVIALAROCCA <br /> <br />
+                  Martedì 29 Ottobre 2013 <br />
+                  SPAZIORIGINALE   <br />
+                  Via Savona 55A, Milano   <br />
+                  dalle 9.30 alle 18.30 <br />
+
+                  <br />dalle 9.30 alle 11.00 BREAKFAST <br />
+                  dalle 17.00 TEA&BISCUITS  <br /> <br />
+
                   Colgo l'occasione per comunicare che, da questa stagione, l'ufficio stampa <strong>flavialarocca</strong> tornerà ad essere interno.<br />
                   Per qualsiasi richiesta si prega di contattare  <a href="mailto:press@flavialarocca.com">press@flavialarocca.com</a>
 
