--- a/source/shop/presskit.html.haml
+++ b/source/shop/presskit.html.haml
@@ -8,12 +8,12 @@
       %h2.title
         %a{href: "#"}
           %span
-            SPRING-SUMMER 2014
+            STRIPES-MANIA
 
 
       .list
         %div
-          = image_tag "presskit/lowres/small_lowfi/flavialaroccaSS14_1.jpg", :"data-src" => "../img/shop/list/small/flavialaroccaSS14_1.jpg"
+          = image_tag "presskit/lowres/small_lowfi/small_dress_righe_rosso_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_dress_righe_rosso.jpg"
 
         %div
           = image_tag "shop/list/small_lowfi/small_gonna_righe_arancio_lowfi.jpg", :"data-src" => "../img/shop/list/small/small_gonna_righe_arancio.jpg"
